syntax = "proto3";

package Jubo.JuLiao.IM.Wx.Proto;

import "TransportMessage.proto";

message WeChatTalkToFriendNoticeMessage {
  string WeChatId = 1;
  string FriendId = 3;
  EnumContentType ContentType = 5;
  bytes Content = 6;
  int64 MsgId = 7;
  int64 msgSvrId = 8;
  int64 CreateTime = 9;
  string Ext = 10;
  int64 TaskId = 11;
}
