syntax = "proto3";

package  Jubo.JuLiao.IM.Wx.Proto;
option csharp_namespace = "SCRM.SHARED.Proto";

import "TransportMessage.proto";

message DeviceAuthRspMessage {
  message ExtraMessage {
    int64 SupplierId = 1;
    int64 UnionId = 2;
    EnumAccountType AccountType = 3;
    string SupplierName = 4;
    string NickName = 5;
    string Token = 6;
  }

  string AccessToken = 1;
  ExtraMessage Extra = 2;
}
