syntax = "proto3";

package  SCRM.SHARED.Proto;

import "TransportMessage.proto";

// 好友信息消息
message FriendMessage {
  string FriendId = 1;  // 好友ID
  string FriendNo = 2;  // 好友编号
  string FriendNick = 3;  // 好友昵称
  string Memo = 4;  // 备注
  EnumGender Gender = 5;  // 性别
  string Country = 6;  // 国家
  string Province = 7;  // 省份
  string City = 8;  // 城市
  string Avatar = 9;  // 头像
  string Remark = 10;  // 备注名
  int32 Type = 11;  // 类型
  string LabelIds = 12;  // 标签ID列表
  string Phone = 13;  // 电话
  string Desc = 14;  // 描述
  int32 Source = 15;  // 来源
  string SourceExt = 16;  // 来源扩展
  int64 CreateTime = 17;  // 创建时间
}

// 好友添加通知消息
message FriendAddNoticeMessage {
  string WeChatId = 1;  // 微信ID
  FriendMessage Friend = 3;  // 好友信息
}
