syntax = "proto3";

package  Jubo.JuLiao.IM.Wx.Proto;
option csharp_namespace = "SCRM.SHARED.Proto";

import "TransportMessage.proto";

// FriendTalkNotice definition
// Restored from FriendTalkNotice.java
message FriendTalkNoticeMessage {
    string WeChatId = 1;
    string FriendId = 3;
    EnumContentType ContentType = 5;
    bytes Content = 6;
    int64 MsgId = 7;
    int64 msgSvrId = 8;
    string Ext = 9;
    int64 CreateTime = 10;
    string NickName = 11;
}
