syntax = "proto3";

package  Jubo.JuLiao.IM.Wx.Proto;
option csharp_namespace = "SCRM.SHARED.Proto";

import "TransportMessage.proto";

// TalkToFriendTaskResultNotice Message
// Extracted from: TalkToFriendTaskResultNotice.java
// Note: Field numbers 8 and 9 are missing (possibly reserved or removed)
message TalkToFriendTaskResultNoticeMessage {
  bool Success = 1;
  EnumErrorCode Code = 2;
  string ErrMsg = 3;
  string WeChatId = 4;
  string FriendId = 5;
  int64 MsgId = 6;
  int64 MsgSvrId = 7;
  int64 CreateTime = 10;
}
